--- a/build.gradle
+++ b/build.gradle
@@ -156,11 +156,8 @@ publishing {
         }
     }
 }
-
-// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
-idea {
-    module {
-        downloadSources = true
-        downloadJavadoc = true
-    }
+compileJava {
+    options.encoding = 'UTF-8'
 }
+// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
+
